# aoc2022

./: .gitignore  Cargo.toml  README.md
inputs/: README.md
src/: main.rs  utils.rs
src/puzzles/: mod.rs  puzzle01.rs  puzzle02.rs  puzzle03.rs  puzzle04.rs  puzzle05.rs  puzzle06.rs  puzzle07.rs  puzzle08.rs  puzzle09.rs  puzzle19.rs  puzzle22.rs
