[package]
name = "aoc2022"
version = "0.1.0"
authors = ["sherlockmatt <matthew.w.dawson@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 3

[dependencies]
structopt = "0.3"
failure = "0.1"
exitfailure = "0.5"
reqwest = { version = "0.11.13", features = ["blocking"] }
itertools = "0.10.5"
num = "0.4.0"
arr_macro = "0.1"
regex = "1.4"
lazy_static = "1.4"
